--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Karusel – Aleksandar Gazibara</title>
+  <title>About – Aleksandar Gazibara</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="/img/favicon.png">
 
