Izmena dimenzija za sliku

--- a/sen.html
+++ b/sen.html
@@ -27,9 +27,7 @@
 
     <!-- Ovde Pandoc ubacuje sadržaj tvoje .md priče -->
     <figure>
-    <img src="img/sen.png" alt="Sen" />
-    <figcaption aria-hidden="true">Sen</figcaption>
-    </figure>
+    <img src="img/sen.png" width="280" height="auto" alt="Sen" />
     <p>Morao bih do prodavnice, nisam izlazio dva dana – pomisli Senad,
     koji je s manjim poteškoćama već neko vreme pokušavao da se navikne
     na svoj novi penzionerski život.</p>
