Nova verzija sen.html

--- a/sen.html
+++ b/sen.html
@@ -26,8 +26,9 @@
     <h2>Aleksandar Gazibara</h2>
 
     <!-- Ovde Pandoc ubacuje sadržaj tvoje .md priče -->
-    <figure>
+  <div style="text-align: center; margin: 2rem 0;">
     <img src="img/sen.png" width="280" height="auto" alt="Sen" />
+</div>
     <p>Morao bih do prodavnice, nisam izlazio dva dana – pomisli Senad,
     koji je s manjim poteškoćama već neko vreme pokušavao da se navikne
     na svoj novi penzionerski život.</p>
@@ -132,11 +133,9 @@
     – Da, vi mladi tako lepo i lako pamtite. Nema ga već neko vreme, zar
     ne?<br />
     – Da, on obično utorkom, ali nisam ga videla danas.</p>
-    <p>Senad ostade skamenjen. Posmatrao i slušao ovaj razgovor dok je
-    praktično rukom bio naslonjen na šalter, gledajući pravo kroz
-    prozor, pomerajući glavu levo–desno prateći dinamiku razgovora.</p>
-    <p>Oseti kako se nešto u njemu ruši, na trenutak oseti veliku
-    slabost, a onda izađe iz pošte i nestade iza ugla.</p>
+    <p>Senad ostade skamenjen. Posmatrao je i slušao ovaj razgovor s rukom naslonjen na šalter.  Gledao je pravo kroz
+    prozor, pomerajući glavu levo–desno pokušavajući da prati dinamiku razgovora.</p>
+    <p>Odjednom oseti kako se nešto u njemu ruši. Onda izađe iz pošte i nestade iza ugla.</p>
 
     <br>
     <a href="index.html" class="back">← Nazad na početnu</a>
