Nova verzija eho.html i index.html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div class="story"><img alt="Eliksir" src="img/lxr.jpg"/><h3><a href="eliksir.html">LXR</a></h3><p>Na korak do večnosti.</p></div>
      <div class="story"><img alt="Imprint" src="img/imprint.png"/><h3><a href="imprint.html">Imprint</a></h3><p>Kada otkriće postane zločin.</p></div>
      <div class="story"><img alt="Context Union" src="img/contextunion.jpeg"/><h3><a href="context-union.html">Context Union</a></h3><p>Jedna kapsula. Jedan kontekst. Život bez samoće.</p></div>
+     <div class="story" data-featured="1"><img alt="Sen" src="img/sen.png"/><h3><a href="sen.html">Sen</a></h3><p>Senka, san, Senad.</p>
     
     <!--  
 
@@ -50,7 +51,7 @@
 <footer style="text-align:center; color:#ccc; font-size:0.9rem; padding: 25px 0; background-color:#0a0a0a; font-family: 'Inter', sans-serif;">
   <div style="margin-bottom: 10px;">
     © 2025 Aleksandar Gazibara<br>
-    kontakt: agazibara (at) gmail.com<br><br>
+    agazibara (at) gmail.com<br><br>
     <a href="about.html">About</a>
   </div>
   <hr style="border: none; border-top: 1px solid rgba(59,165,92,0.6); width: 70%; margin: 18px auto;">
