Nova verzija price

--- a/sen.html
+++ b/sen.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Sen – Aleksandar Gazibara</title>
+  <title> – Aleksandar Gazibara</title>
 
   <!-- CSS / favicon zadržani kao kod tebe -->
   <link rel="stylesheet" href="style.css">
@@ -22,44 +22,31 @@
 <body>
   <main>
     <!-- Naslovi iz meta (ako nema author, ne prikazuje se) -->
-    <h1>Sen</h1>
-    <h2>Aleksandar Gazibara</h2>
+    <h1></h1>
+    
 
     <!-- Ovde Pandoc ubacuje sadržaj tvoje .md priče -->
-  <div style="text-align: center; margin: 2rem 0;">
-    <img src="img/sen.png" width="280" height="auto" alt="Sen" />
-</div>
+    <p>title: “Eho” author: “Aleksandar Gazibara” —</p>
+    <div style="text-align: center; margin: 2rem 0;">
+    <p><img src="img/eho.png" width="280" alt="Eho"></p>
+    </div>
     <p>Morao bih do prodavnice, nisam izlazio dva dana – pomisli Senad,
-    koji je s manjim poteškoćama već neko vreme pokušavao da se navikne
-    na svoj novi penzionerski život.</p>
-    <p>Njegov novi ritam podrazumevao je kupovinu novina, odlazak do
-    obližnje piljarnice po namirnice i povremeni obilazak Pošte. I dalje
-    je redovno poručivao knjige preko interneta. Moglo bi se reći da mu
-    je čitanje to bila neka vrsta hobija.</p>
-    <p>Budući da nikada nije zasnovao porodicu, niko ga nije redovno
-    obilazio, a nije imao ni redovne kontakte sa komšijama u zgradi.
-    Svoj radni vek proveo je radeći kao činovnik u Dunav osiguranju.
-    Kolege će ga pamtiti kao nekoga ko je bio neupadljiv, marljiv u meri
-    u kojoj je to bilo potrebno, diskretan i relativno povučen.</p>
-    <p>Nekim kolegama čak ni posle nekoliko meseci otkako je otišao u
-    penziju nije padao na pamet, sve dok ih neko direktno na njega ne bi
-    podsetio.</p>
-    <p>Senad je bio pouzdan radnik, ali se ni po čemu nije isticao i za
-    njim nisu ostale nikakve anegdote koje bi kolektiv mogao da
-    prepričava sve dok potpuno ne potone u zaborav.</p>
-    <h2 id="rutina">Rutina</h2>
-    <p>Počeo pomalo i da uživa u svojim novim ritualima. Čak je počeo i
-    da upoznaje ljude koji su radili u lokalima koje je skoro
-    svakodnevno posećivao.</p>
+    koji se tek navikavao na penzionerski život. Njegovi dani svodili su
+    se na kupovinu novina, odlazak do piljarnice i povremeni obilazak
+    Pošte. Knjige je redovno poručivao preko interneta. Nije imao
+    porodicu, a ni mnogo kontakta s komšijama. Radni vek proveo je kao
+    činovnik u Dunav osiguranju – pouzdan, diskretan, neupadljiv. Kolege
+    su ga već posle nekoliko meseci skoro potpuno zaboravile.</p>
+    <p>Počeo je pomalo i da uživa u svojim novim ritualima. Čak je počeo
+    i da upoznaje ljude koji su radili u lokalima koje je skoro
+    svakodnevno posećivao:</p>
     <ul>
-    <li>U pošti: gospođa Ruža.<br />
-    </li>
-    <li>U piljarnici: vlasnik Darko.<br />
-    </li>
-    <li>Na kiosku: mlađa devojka Bojana.</li>
+    <li><p>u pošti – gospođa Ruža,</p></li>
+    <li><p>u piljarnici – vlasnik Darko,</p></li>
+    <li><p>na kiosku – mlađa devojka Bojana.</p></li>
     </ul>
-    <p>Sa svakim od njih izgradio je jedan mali, komšijski odnos. To je
-    na neki način bio njegov novi socijalni život.</p>
+    <p>Sa svakim od njih izgradio je jedan mali, komšijski odnos. To je,
+    na neki način, bio njegov novi socijalni život.</p>
     <p>– Zdravo, komšija! Dajte malo kajmaka i manju pogaču – uzvikne
     Senad.<br />
     – Odmah stiže, gospodine Neneziću – odgovori mu Darko dok hitro
@@ -71,10 +58,9 @@
     <p><em>Nisam ni znao koliko je moguće uživati u malim stvarima i
     malim razgovorima. Fini komšiluk, pre penzije ništa od ovoga nisam
     primećivao. Možda je to i starost.</em></p>
-    <h2 id="promena">Promena</h2>
     <p>Jedno jutro, Senad se probudio znatno kasnije nego obično. Od
     početka se nije osećao kao da je sve u redu. Nije potpuno vladao
-    svojim telom, misli su mu bile rasute, a njegov stan mu je odjednom
+    svojim telom, misli su mu bile rasute, a stan mu je odjednom
     izgledao pomalo nepoznato.</p>
     <p><em>Hm, danas je sve pomalo drugačije</em> – pomisli Senad. –
     <em>Da li možda da ne idem nikuda…</em></p>
@@ -83,8 +69,8 @@
     lokale u uobičajenom redosledu.</p>
     <p>Kročio je u piljarnicu u kojoj je već bio veći red. Pomisli kako
     je i to drugačije nego inače i da je možda bolje da nije ni izlazio.
-    Ali, Darko će ga primetiti i možda će ga pustiti preko reda. Ipak
-    sam ja penzioner.</p>
+    Ali, Darko će ga primetiti i možda će ga pustiti preko reda.
+    <em>Ipak sam ja penzioner.</em></p>
     <p>Onda primeti da niko ne obraća pažnju na njega.</p>
     <p><em>U moje vreme… pa ja bih prvi pustio stariju osobu pre
     sebe</em> – pomisli Senad rezignirano.</p>
@@ -94,7 +80,7 @@
     <p>Kada je konačno stigao na red, Darko pogledom prelete preko
     njega, a onda se obrati nekome iza.</p>
     <p>– Izvolite, gospođo – reče Darko, pomalo nervozno.<br />
-    – Molim Vas, dvesta grama pečenice – reče gospođa, šireći miris
+    – Molim vas, dvesta grama pečenice – reče gospođa, šireći miris
     parfema.</p>
     <p>– Darko? – zausti Senad.</p>
     <p>Darko nastavi da uslužuje.</p>
@@ -103,8 +89,8 @@
     <p><em>O čemu se radi? Bar je Darko uvek bio pristojan. Kuda ide
     ovaj svet… Nije mi ni potrebno ništa, zapravo.</em></p>
     <p>Senad izađe iz lokala uz mešavinu ljutnje i razočaranosti.</p>
-    <p>Hajde samo još do kioska po novine, pa da se vraćam. Ovaj dan je
-    dosta loše krenuo.</p>
+    <p><em>Hajde samo još do kioska po novine, pa da se vraćam. Ovaj dan
+    je dosta loše krenuo.</em></p>
     <p>– Dobar dan – reče Senad, nadajući se da će konačno imati makar
     kakav-takav razgovor. Od jutra nije ni s kim progovorio ni reč.</p>
     <p>Bojana je bila zagledana u svoj mobilni telefon.</p>
@@ -113,7 +99,7 @@
     <p><em>Ah, konačno</em> – pomisli Senad. Međutim, Bojana je samo
     ostala zagledana u daljinu. Činilo mu se da gleda pravo kroz
     njega.</p>
-    <p>– Bojana, da li mogu da Vas zamolim za novine?</p>
+    <p>– Bojana, da li mogu da vas zamolim za novine?</p>
     <p>Bojana ostade zagledana još nekoliko trenutaka, a onda joj se
     lice iskrivi u osmeh.</p>
     <p><em>Pa, zaista, konačno</em> – pomisli Senad.</p>
@@ -133,9 +119,11 @@
     – Da, vi mladi tako lepo i lako pamtite. Nema ga već neko vreme, zar
     ne?<br />
     – Da, on obično utorkom, ali nisam ga videla danas.</p>
-    <p>Senad ostade skamenjen. Posmatrao je i slušao ovaj razgovor s rukom naslonjen na šalter.  Gledao je pravo kroz
-    prozor, pomerajući glavu levo–desno pokušavajući da prati dinamiku razgovora.</p>
-    <p>Odjednom oseti kako se nešto u njemu ruši. Onda izađe iz pošte i nestade iza ugla.</p>
+    <p>Senad ostade skamenjen. Posmatrao je i slušao ovaj razgovor s
+    rukom naslonjenom na šalter. Gledao je pravo kroz prozor, pomerajući
+    glavu levo–desno, pokušavajući da prati dinamiku razgovora.</p>
+    <p>Odjednom oseti kako se nešto u njemu ruši. Onda izađe iz pošte i
+    nestade iza ugla. Njegovu priliku nije pratila jasna senka.</p>
 
     <br>
     <a href="index.html" class="back">← Nazad na početnu</a>
