--- a/sen.html
+++ b/sen.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title> – Aleksandar Gazibara</title>
+  <title>Sen – Aleksandar Gazibara</title>
 
   <!-- CSS / favicon zadržani kao kod tebe -->
   <link rel="stylesheet" href="style.css">
@@ -22,13 +22,12 @@
 <body>
   <main>
     <!-- Naslovi iz meta (ako nema author, ne prikazuje se) -->
-    <h1></h1>
-    
+    <h1>Sen</h1>
+    <h2>Aleksandar Gazibara</h2>
 
     <!-- Ovde Pandoc ubacuje sadržaj tvoje .md priče -->
-    <p>title: “Eho” author: “Aleksandar Gazibara” —</p>
     <div style="text-align: center; margin: 2rem 0;">
-    <p><img src="img/eho.png" width="280" alt="Eho"></p>
+    <p><img src="img/sen.png" width="280" alt="Sen"></p>
     </div>
     <p>Morao bih do prodavnice, nisam izlazio dva dana – pomisli Senad,
     koji se tek navikavao na penzionerski život. Njegovi dani svodili su
