novi sen.html i druge promene

--- a/sen.html
+++ b/sen.html
@@ -79,7 +79,7 @@
     <p>Kada je konačno stigao na red, Darko pogledom prelete preko
     njega, a onda se obrati nekome iza.</p>
     <p>– Izvolite, gospođo – reče Darko, pomalo nervozno.<br />
-    – Molim vas, dvesta grama pečenice – reče gospođa, šireći miris
+    – Molim Vas, dvesta grama pečenice – reče gospođa, šireći miris
     parfema.</p>
     <p>– Darko? – zausti Senad.</p>
     <p>Darko nastavi da uslužuje.</p>
