--- a/sen.html
+++ b/sen.html
@@ -58,9 +58,9 @@
     malim razgovorima. Fini komšiluk, pre penzije ništa od ovoga nisam
     primećivao. Možda je to i starost.</em></p>
     <p>Jedno jutro, Senad se probudio znatno kasnije nego obično. Od
-    početka se nije osećao kao da je sve u redu. Nije potpuno vladao
-    svojim telom, misli su mu bile rasute, a stan mu je odjednom
-    izgledao pomalo nepoznato.</p>
+    početka se nije osećao kao da je sve u redu. Kao da je u polusnu.
+    Nije potpuno vladao svojim telom, misli su mu bile rasute, a stan mu
+    je odjednom izgledao pomalo nepoznato.</p>
     <p><em>Hm, danas je sve pomalo drugačije</em> – pomisli Senad. –
     <em>Da li možda da ne idem nikuda…</em></p>
     <p>Seo je da se odmori, ne osećajući punu težinu tela. Nije tome
