Promena imena u eliksir.html

--- a/eliksir.html
+++ b/eliksir.html
@@ -32,10 +32,10 @@ Na hol monitoru stoji: „Beba Abramović — termin 10:30“.<br>
  — Hajdemo, dr Ilić nas čeka — kaže i okretno klizne niz hodnik.<br><br>
 U ordinaciji ih dočekuje dr Ilić.<br><br>
  — Dobar dan. Sedite.<br><br>
- Marko i Dajana se pogledaju, kratko pregovaraju očima, pa zauzmu stolice.<br><br>
-— Danas prolazimo kroz inicijalnu proceduru. Prva faza je prikupljanje materijala. Marko, vi možete već danas da deponujete ejakulat. Dajana, vama ćemo zakazati ekstrakciju. Na imejl dobijate anketu za definisanje parametara; potom dolazi prvi DNK editing. Imate li pitanja?<br>
-— Mislim da ne — kaže Marko. — Znači, ja počinjem već danas?<br>
- — Tako je. Sestro, pođite s Markom. Vidimo se za dve nedelje.<br>
+ Miloš i Dijana se pogledaju, kratko pregovaraju očima, pa zauzmu stolice.<br><br>
+— Danas prolazimo kroz inicijalnu proceduru. Prva faza je prikupljanje materijala. Miloše, vi možete već danas da deponujete ejakulat. Dijana, vama ćemo zakazati ekstrakciju. Na imejl dobijate anketu za definisanje parametara; potom dolazi prvi DNK editing. Imate li pitanja?<br>
+— Mislim da ne — kaže Miloš. — Znači, ja počinjem već danas?<br>
+ — Tako je. Sestro, pođite s Milošem. Vidimo se za dve nedelje.<br>
 
 E-mail — „Anketa embriona“
 <br> Pošiljalac: Nexus (Nacionalni centar za eksternu gestaciju)<br>
@@ -43,10 +43,10 @@ E-mail — „Anketa embriona“
 Poštovani,<br>
  molimo vas da popunite parametre kako bismo u sledećoj iteraciji započeli DNK editovanje.<br><br>
   
-— Dako, stigao je imejl! — dobacuje Marko iz kuhinje.<br>
+— Dako, stigao je imejl! — dobacuje Miloš iz kuhinje.<br>
  — Aha, mili, stižem.<br>
  — Uff, pet strana… potrajaće.<br>
- — Mili, jednom pravimo bebu — nasmeje se Dajana nehajno.<br>
+ — Mili, jednom pravimo bebu — nasmeje se Dijana nehajno.<br>
  — U pravu si, ljubavi.<br>
 — Aj prvo izgled. Kosa — crna?<br>
  — Može.<br>
@@ -62,21 +62,21 @@ Poštovani,<br>
  — Devojčica.<br>
  — Oči plave?<br>
  — Može, hajde.<br><br>
-Marko i Dajana do duboko u noć biraju parametre svog deteta. Sledeci sastanak sa Dr Ilićem bio je zakazan za naredni četvrtak.<br><br>
+Miloš i Dijana do duboko u noć biraju parametre svog deteta. Sledeci sastanak sa Dr Ilićem bio je zakazan za naredni četvrtak.<br><br>
 
 <h2>Kontrola</h2>
 <br>
 Dr Ilić prebira po ekranu.<br><br>
- — Vidim, parametri su izabrani. Marko, vaš materijal imamo. Dajana, vi ostajete danas.<br>
-— U redu — kaže Dajana.<br>
+ — Vidim, parametri su izabrani. Miloš, vaš materijal imamo. Dijana, vi ostajete danas.<br>
+— U redu — kaže Dijana.<br>
 — U ovoj fazi spajamo vaš materijal i radimo DNK optimizaciju. Da bismo bili sigurni u uspeh, napravićemo više kombinacija. Dva optimalna uzorka idu u inkubator do 12. nedelje; tada biramo onaj koji ostaje do kraja razvoja.<br><br>
  (Pogleda ih.)<br><br>
  — Da li radimo i mikrosonde LXR?<br>
-— Ne — kaže Marko, kratko se nakašljavši. — Odlučili smo samo DNK optimizaciju.<br>
+— Ne — kaže Miloš, kratko se nakašljavši. — Odlučili smo samo DNK optimizaciju.<br>
 — Razumem. Mnogi parovi poput vas tako razmišljaju. Cena često bude odlučujući faktor.<br>
  — Da. Pružićemo joj najbolje moguće uslove.<br>
  — Ah, vidim… devojčica. Imate li ime?<br>
- — Mislili smo Jana, ali nismo doneli konačnu odluku — kaže Dajana.<br>
+ — Mislili smo Jana, ali nismo doneli konačnu odluku — kaže Dijana.<br>
 — Dobro. Stiže vam izveštaj na imejl, kao i link preko koga pratite vitalne parametre. Nekad je to bilo: dođeš kod lekara, ultrazvuk, snimci. Sada je sve u aplikaciji. Pitanje je trenutka kada ćete kroz aplikaciju moći da obavite sve ovo u cemu mi trenutno samo posredujemo. Tehnologija je čudo.<br><br>
 Na izlazu, u hodniku, tiho svetli bilbord:<br>
  LXR — „Živite dok večnost ne dođe.“<br><br>
@@ -126,7 +126,7 @@ Divno, da li mislis da smo pogrešili sa sondama?<br>
 Mila, to košta čitavo bogatstvo, ne možemo ni u ludilu, a i pitam se kakav je to život. Ko želi da živi 200 godina?<br><br>
 
 
-U toku noci Markov telefon je zasvetleo, probudivsi ga. Bila je to notifikacija od Nexusa u kojoj je pisalo <br><br>
+U toku noci Milošev telefon je zasvetleo, probudivsi ga. Bila je to notifikacija od Nexusa u kojoj je pisalo <br><br>
 
 🔔 Nexus Obaveštenje<br>
  Embryo Monitor – Abramović Family<br>
