novi sen.html i druge promene

--- a/sen.html
+++ b/sen.html
@@ -48,7 +48,7 @@
     na neki način, bio njegov novi socijalni život.</p>
     <p>– Zdravo, komšija! Dajte malo kajmaka i manju pogaču – uzvikne
     Senad.<br />
-    – Odmah stiže, gospodine Neneziću – odgovori mu Darko dok hitro
+    ≈ – Odmah stiže, gospodine Neneziću – odgovori mu Darko dok hitro
     pakuje i istovremeno motri na ostale kupce u radnji.</p>
     <p>– Je l’ danas isto, komšija? – upita ga Bojana na kiosku.<br />
     – Isto, komšinice – odgovori Senad, pakujući novine.</p>
@@ -61,6 +61,48 @@
     početka se nije osećao kao da je sve u redu. Kao da je u polusnu.
     Nije potpuno vladao svojim telom, misli su mu bile rasute, a stan mu
     je odjednom izgledao pomalo nepoznato.</p>
+    <h2
+    id="hm-danas-je-sve-pomalo-drugačije-pomisli-senad.-da-li-možda-da-ne-idem-nikuda"><em>Hm,
+    danas je sve pomalo drugačije</em> – pomisli Senad. – <em>Da li
+    možda da ne idem nikuda…</em></h2>
+    <p>title: “Sen” author: “Aleksandar Gazibara” image: “img/eho.png”
+    —</p>
+    <div style="text-align: center; margin: 2rem 0;">
+    <p><img src="img/sen.png" width="280" alt="Sen"></p>
+    </div>
+    <p>Morao bih do prodavnice, nisam izlazio dva dana – pomisli Senad,
+    koji se tek navikavao na penzionerski život. Njegovi dani svodili su
+    se na kupovinu novina, odlazak do piljarnice i povremeni obilazak
+    Pošte.</p>
+    <p>Knjige je redovno poručivao preko interneta. Nije imao porodicu,
+    a ni mnogo kontakta s komšijama. Radni vek proveo je kao činovnik u
+    Dunav osiguranju – pouzdan, diskretan, neupadljiv. Kolege su ga već
+    posle nekoliko meseci skoro potpuno zaboravile.</p>
+    <p>Počeo je pomalo i da uživa u svojim novim ritualima. Čak je počeo
+    i da upoznaje ljude koji su radili u lokalima koje je skoro
+    svakodnevno posećivao:</p>
+    <ul>
+    <li><p>u pošti – gospođa Ruža,</p></li>
+    <li><p>u piljarnici – vlasnik Darko,</p></li>
+    <li><p>na kiosku – mlađa devojka Bojana.</p></li>
+    </ul>
+    <p>Sa svakim od njih izgradio je jedan mali, komšijski odnos. To je,
+    na neki način, bio njegov novi socijalni život.</p>
+    <p>– Zdravo, komšija! Dajte malo kajmaka i manju pogaču – uzvikne
+    Senad.<br />
+    – Odmah stiže, gospodine Neneziću – odgovori mu Darko dok hitro
+    pakuje i istovremeno motri na ostale kupce u radnji.</p>
+    <p>– Je l’ danas isto, komšija? – upita ga Bojana na kiosku.<br />
+    – Isto, komšinice – odgovori Senad, pakujući novine.</p>
+    <p>– Penzija već? – upita gospođa Ruža.<br />
+    – Da, sve znate! – odgovori Senad.</p>
+    <p><em>Nisam ni znao koliko je moguće uživati u malim stvarima i
+    malim razgovorima. Fini komšiluk, pre penzije ništa od ovoga nisam
+    primećivao. Možda je to i starost.</em></p>
+    <p>Jedno jutro, Senad se probudio znatno kasnije nego obično. Od
+    početka se nije osećao kao da je sve u redu. Nije potpuno vladao
+    svojim telom, misli su mu bile rasute, a stan mu je odjednom
+    izgledao pomalo nepoznato.</p>
     <p><em>Hm, danas je sve pomalo drugačije</em> – pomisli Senad. –
     <em>Da li možda da ne idem nikuda…</em></p>
     <p>Seo je da se odmori, ne osećajući punu težinu tela. Nije tome
@@ -79,7 +121,7 @@
     <p>Kada je konačno stigao na red, Darko pogledom prelete preko
     njega, a onda se obrati nekome iza.</p>
     <p>– Izvolite, gospođo – reče Darko, pomalo nervozno.<br />
-    – Molim Vas, dvesta grama pečenice – reče gospođa, šireći miris
+    – Molim vas, dvesta grama pečenice – reče gospođa, šireći miris
     parfema.</p>
     <p>– Darko? – zausti Senad.</p>
     <p>Darko nastavi da uslužuje.</p>
