--- a/tpl.html
+++ b/tpl.html
@@ -13,7 +13,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXX'); // isto zameni sa tvojim ID-jem
+    gtag('config', 'G-N3NPY3SWJB'); // isto zameni sa tvojim ID-jem
   } else {
     console.log("GA blocked for this browser");
   }
