--- a/sen.html
+++ b/sen.html
@@ -13,7 +13,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXX'); // isto zameni sa tvojim ID-jem
+    gtag('config', 'G-N3NPY3SWJB'); // isto zameni sa tvojim ID-jem
   } else {
     console.log("GA blocked for this browser");
   }
@@ -37,7 +37,8 @@
 
     <!-- Ovde Pandoc ubacuje sadržaj tvoje .md priče -->
     <div style="text-align: center; margin: 2rem 0;">
-    <p><img src="img/sen.png" width="280" alt="Sen"></p>
+    <img src="img/sen.png" width="280" alt="Sen">
+    </div>
     <p>Morao bih do prodavnice, nisam izlazio dva dana – pomisli Senad,
     koji se tek navikavao na penzionerski život. Njegovi dani svodili su
     se na kupovinu novina, odlazak do piljarnice i povremeni obilazak
@@ -133,7 +134,6 @@
     glavu levo–desno, pokušavajući da prati dinamiku razgovora.</p>
     <p>Odjednom oseti kako se nešto u njemu ruši. Onda izađe iz pošte i
     nestade iza ugla. Njegovu priliku nije pratila jasna senka.</p>
-    </div>
 
     <br>
     <a href="index.html" class="back">← Nazad na početnu</a>
