--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>About – Aleksandar Gazibara</title>
+  <title>O – Aleksandar Gazibara</title>
 
   <!-- CSS / favicon zadržani kao kod tebe -->
   <link rel="stylesheet" href="style.css">
@@ -32,7 +32,7 @@
 <body>
   <main>
     <!-- Naslovi iz meta (ako nema author, ne prikazuje se) -->
-    <h1>About</h1>
+    <h1>O</h1>
     
 
     <!-- Ovde Pandoc ubacuje sadržaj tvoje .md priče -->
